# test_w3school

./: .gitignore  README.md  conftest.py  pyproject.toml
ext_selenium/: common.py
tests/: conftest.py  test_1_contact_name.py  test_2_entry_amount_by_city.py  test_3_add_new_entry.py  test_4_update_entry.py  test_add_new_entry.py  test_contact_name.py  test_delete_entry.py  test_entry_amount_by_city.py
tests/pages/: sql_editor.py
tmp/allure_results/: 031ce7db-b603-4381-945b-bdc2c5055d6c-result.json  0732e4cc-c512-4170-8b04-5a2f8398a1f4-container.json  0bf9568a-ec74-49ff-b470-8f7e010d0316-container.json  0e5786a2-ee53-41b4-8c32-eacee09e0467-result.json  0fe4a4b1-fd6d-45b4-aa22-3ded6efdc264-container.json  16946110-de44-4fff-9bd1-3a73f15eeb86-container.json  190c93e6-9d67-4823-a4ed-def7f97564a9-result.json  1bd55d9f-ec3a-4cd5-85b0-5ae1b8d6de08-result.json  32192b8e-75a0-4228-9ea0-91187f87dff1-result.json  34ff8eb0-483c-4f99-b84f-dbc86ed056df-container.json  355cc493-bdec-4028-82da-80519bd38733-container.json  471512a9-c562-40da-9ba5-d75e8e6312cc-result.json  497bd7f0-57cf-42ef-94b1-0310c51f387b-container.json  4bd4c46e-004a-4488-a858-af87fe4ffd47-container.json  4cb63ce2-8a9b-437f-8bb0-7a8541a858ee-result.json  5fecde01-a4ad-4441-96e3-a8437455c7da-container.json  679f21bf-d061-467d-957f-2c46923d666c-container.json  68437665-c2f0-4a68-9d35-89b6ab5ef01e-container.json  6925f6ab-7399-4bea-96fb-9df6df5cfa09-container.json  6a059019-49f7-4463-9eeb-c5f6d6986374-container.json  6b87bce7-cd64-4c1e-af5d-8135f59e9db2-result.json  (+23 more)
utils/: checkers.py
